fix(ui): Cambios en la tarjeta y scrollbar

--- a/css/sections/_projects.scss
+++ b/css/sections/_projects.scss
@@ -57,14 +57,14 @@
 
   /* ==================== Tarjeta ==================== */
   .tarjeta {
-    overflow: auto;
     display: none;
+    overflow: auto;
     position: fixed;
     top: 9vh;
     left: auto;
+    width: 40vw;
+    height: 85vh;
     z-index: 2;
-    width: 45vw;
-    height: 50vh;
     padding: 24px;
     border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -75,6 +75,11 @@
     color: #cfcfcf;
     box-shadow: 0 4px 40px rgba(255, 255, 255, 0.05);
     font-size: 16px;
+    transition: $mainTransition;
+    -webkit-transition: $mainTransition;
+    -moz-transition: $mainTransition;
+    -ms-transition: $mainTransition;
+    -o-transition: $mainTransition;
 
     h3 {
       color: #e1e1e1;
