--- a/css/styles.scss
+++ b/css/styles.scss
@@ -15,9 +15,19 @@
 ::-webkit-scrollbar {
   width: 8px;
   background: #3f5e60;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 ::-webkit-scrollbar-track {
   background: $scrollGradient;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 ::-webkit-scrollbar-thumb {
   border: #3f5e60 1px solid;
